--- a/styly.css
+++ b/styly.css
@@ -115,3 +115,11 @@ video[controls] + .player-controls {
 .form-control.is-invalid {
 	margin-bottom: 0;
 }
+.is-invalid {
+    border: 1px solid red;
+}
+.invalid-feedback {
+    color: red;
+    display: block;
+    font-size: 0.875em;
+}
