--- a/styly.css
+++ b/styly.css
@@ -123,3 +123,25 @@ video[controls] + .player-controls {
     display: block;
     font-size: 0.875em;
 }
+#rating-container {
+    display: flex;
+    gap: 10px;
+    cursor: pointer;
+}
+
+.button-star {
+    font-size: 2rem;
+    color: #ccc;
+}
+
+.button-star.fas {
+    color: gold;
+}
+.far {
+    color: gray;
+}
+
+.fas {
+    color: gold;
+}
+
